@@ -2,6 +2,8 @@
 
 	* lib/qwik/Makefile: Reset target clean.
 
+	* lib/qwik/act-files.rb (show_files_form_and_the_list): Divided.
+
 2007-08-12  Kouichirou Eto  <2007 eto.com>
 
 	* lib/qwik/farm.rb (each): Add check site (stub).
